infra/k8s/identity/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: identity
spec:
  selector:
    app: identity-deployment
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  namespace: identity
spec:
  selector:
    matchLabels:
      app: identity-deployment
  template:
    metadata:
      labels:
        app: identity-deployment
    spec:
      containers:
        - name: identity-deployment
          image: wneet/sync-identity:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 7
            periodSeconds: 60
