infra/k8s/identity/scylladb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: identity-scylladb
  namespace: identity
spec:
  selector:
    app: identity-scylladb
  ports:
    - port: 9042
      name: scylladb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: identity-scylladb
  namespace: identity
spec:
  selector:
    matchLabels:
      app: identity-scylladb
  serviceName: identity-scylladb
  replicas: 1
  template:
    metadata:
      labels:
        app: identity-scylladb
    spec:
      containers:
        - name: scylladb
          image: scylladb/scylla:latest
          args: [
              "--listen-address",
              "0.0.0.0",
              "--rpc-address",
              "0.0.0.0",
              "--broadcast-rpc-address",
              "$(POD_IP)", # Use pod IP
              "--seed-provider-parameters",
              "seeds=0.0.0.0",
              "--developer-mode",
              "1",
              "--reactor-backend=epoll",
            ]
          ports:
            - containerPort: 9042
              name: scylladb
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "2"
          volumeMounts:
            - name: scylla-data
              mountPath: /var/lib/scylla
  volumeClaimTemplates:
    - metadata:
        name: scylla-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
