infra/k8s/identity/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-ingress
  namespace: identity
  labels:
    name: identity-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost.com
      secretName: ingress
  rules:
    - host: localhost.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /identity(/|$)(.*)
            backend:
              service:
                name: identity-service
                port:
                  number: 8080
